WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201773
foundStringMatchIndex in FindController::findString gets reset on page scroll
https://bugs.webkit.org/show_bug.cgi?id=201773
Summary
foundStringMatchIndex in FindController::findString gets reset on page scroll
mmokary
Reported
2019-09-13 14:13:51 PDT
When moving through string matches on a page, the foundStringMatchIndex is sometimes reset to 0. Seems to happen where two load chunks meet -- I don't know about WebKit's page loading strategy but I assume pages are rendered in chunks and the counter reset happens where I would guess the cutoffs for chunk loading are. This is reproducible, for example, on the Google results page for "cheese" if you search for the string "cheese."
Attachments
Patch
(2.90 KB, patch)
2019-10-04 13:17 PDT
,
mmokary
no flags
Details
Formatted Diff
Diff
Patch
(4.04 KB, patch)
2019-10-04 16:53 PDT
,
mmokary
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-09-13 14:14:04 PDT
<
rdar://problem/55351892
>
mmokary
Comment 2
2019-10-04 13:17:56 PDT
Created
attachment 380241
[details]
Patch
Tim Horton
Comment 3
2019-10-04 13:20:49 PDT
Comment on
attachment 380241
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380241&action=review
> Source/WebKit/ChangeLog:5 > +
radar # should be here if it exists ahead of time (see other patches on trac.webkit.org)
mmokary
Comment 4
2019-10-04 16:53:00 PDT
Created
attachment 380267
[details]
Patch
WebKit Commit Bot
Comment 5
2019-10-07 11:37:43 PDT
Comment on
attachment 380267
[details]
Patch Clearing flags on attachment: 380267 Committed
r250779
: <
https://trac.webkit.org/changeset/250779
>
WebKit Commit Bot
Comment 6
2019-10-07 11:37:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug