foundStringMatchIndex in FindController::findString gets reset on page scroll https://bugs.webkit.org/show_bug.cgi?id=201773 <rdar://problem/55351892>

Patch by Matt Mokary <mmokary@apple.com> on 2019-10-07
Reviewed by Tim Horton.

Decouple hiding of the find indicator from resetting match index, and only reset match index when there is not
an active match.

* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::updateFindUIAfterPageScroll):
(WebKit::FindController::hideFindUI):
(WebKit::FindController::hideFindIndicator):
(WebKit::FindController::resetMatchIndex):
* WebProcess/WebPage/FindController.h:
* WebProcess/WebPage/ios/FindControllerIOS.mm:
(WebKit::FindController::hideFindIndicator):
(WebKit::FindController::resetMatchIndex):

Canonical link: https://commits.webkit.org/216108@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250779 268f45cc-cd09-0410-ab3c-d52691b4dbfc